--- a/css/signUpStyle.css
+++ b/css/signUpStyle.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-image: url(background.jpg);
+  background-image: url("../images/bg.jpg");
   background-size: cover;
   background-position: center;
 }
@@ -20,11 +20,12 @@ body {
   color: lightblue;
   margin-bottom: 30px;
 }
+
 .input-box {
   border-radius: 20px;
   padding: 10px;
   margin: 10px 0;
-  width: 100%;
+  width: 93%;
   border: 1px solid #999;
   outline: none;
 }
