--- a/css/signUpStyle.css
+++ b/css/signUpStyle.css
@@ -7,12 +7,42 @@ body {
   background-position: center;
 }
 
+/* navbar styles */
+.navbar-nav {
+  display:flex;
+  list-style-type: none;
+  background-color:white;
+  width: 100%;
+  height: 60px;
+  margin: 0;
+  padding: 0;
+  align-items:center;
+}
+
+.navbar-brand {
+  color: black;
+  text-decoration: none;
+  padding: 10px;
+  font-size:1.25rem;
+}
+
+.nav-link {
+  color:grey;
+  text-decoration: none;
+  padding: 10px;
+}
+
+.nav-link:hover {
+  color:black;
+}
+/* end of navbar styles */
+
 .sign-up-form {
   width: 300px;
   box-shadow: 0 0 3px 0 rgb(0, 0, 0, 0.3);
   background: #fff;
   padding: 20px;
-  margin: 8% auto 0;
+  margin: 8% auto;
   text-align: center;
 }
 
