--- a/css/signUpStyle.css
+++ b/css/signUpStyle.css
@@ -2,8 +2,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-image: url("../images/bg.jpg");
-  background-size: cover;
+  background-image: url("../images/3.png");
+  background-size:cover;
   background-position: center;
 }
 
